--- a/resources/assets/sass/components/font.scss
+++ b/resources/assets/sass/components/font.scss
@@ -6,6 +6,11 @@
         text-align: center;
         font-family: Agency FB;
         font-weight: normal;
+        
+        a{
+            text-decoration: none;
+            color: black;
+        }
     }
 
     .heading{
