--- a/resources/assets/sass/components/breakpoints.scss
+++ b/resources/assets/sass/components/breakpoints.scss
@@ -21,12 +21,13 @@
         }
         
         h1{
-            font-size: 4em;
+            font-size: 3.5em;
         }
         
         #Bars {
             font-size: 3em;
-            margin-top: 1em;
+            margin-top: 1.1em;
+//            margin-left: 0.2em;
         }
     }
     section{
@@ -104,13 +105,13 @@
             margin-left: 3em;
         }
         img{
-            width: 25em;
-            height: 25em;
-            margin: 1.5em 8.5em 1.5em 8.5em;
+            width: 18em;
+            height: 18em;
+            margin: 1.5em 13.5em 1.5em 13em;
         }
         .cls{
             width: 5em;
-            margin: 2em 0 0 24em;
+            margin: 2em 0 0 21em;
         }
     }
     
@@ -126,7 +127,7 @@
     
     .imgContainer{
         border: white solid thin;
-        width: 93.5%;
+        width: 34.5em;
         margin: auto;
     }
     
@@ -144,9 +145,9 @@
         }
         
         img{
-            width: 20em;
-            height: 20em;
-            margin: 1em 1em 1em 2.15em;
+            width: 15em;
+            height: 15em;
+            margin: 1em 0.5em 1em 1em;
             border: 0.15em black solid;
         }
     }
@@ -348,6 +349,7 @@
         }
 
         .work{
+            margin-left: 6em;
             p{
                 color: black;
                 font-family: Agency FB;
@@ -359,7 +361,7 @@
         
         .imgContainer{
             border: limegreen thin solid;
-            width: 75%;
+            width: 50em;
             margin: auto;
         }
 
