--- a/resources/assets/sass/components/main.scss
+++ b/resources/assets/sass/components/main.scss
@@ -58,6 +58,11 @@ section{
 //    border: orange thin solid;
 //    margin-left: 2em;
 }
+.imgContainer{
+//    border: green solid thin;
+    margin: auto;
+    width: 28em;
+}
 
 .paper,.logo,.packaging{
     flex: 1 0 auto;
@@ -66,8 +71,9 @@ section{
     img{
         width: 8.5em;
         height: 8.5em;
-        margin-left: 3.5em;
-        margin-bottom: 3em;
+        margin: 1em 2.5em 1em 2.5em;
+//        margin-left: 3.5em;
+//        margin-bottom: 3em;
         border: 0.15em black solid;
     }
 }
@@ -80,7 +86,7 @@ section{
     opacity: 1;
 //    border: thin black solid;
     height: auto;
-    width: 95%;
+    width: 100%;
     margin: auto;
     background-color: $primary-back-color;
     p{
@@ -90,7 +96,7 @@ section{
     img{
         width: 20em;
         height: 20em;
-        margin: 1.5em 3.5em 1.5em 3.5em;
+        margin: 1.5em 3.5em 1.5em 4em;
 //        margin-top: 1.5em;
         border: none;
     }
