--- a/resources/assets/sass/components/font.scss
+++ b/resources/assets/sass/components/font.scss
@@ -94,5 +94,9 @@
     #Form{
         color: black;
         font-size: 1em;
+        
+        #Send{
+            font-size: 1.5em;
+        }
     }
 /*=======================================================*/
