--- a/resources/assets/sass/components/main.scss
+++ b/resources/assets/sass/components/main.scss
@@ -86,17 +86,17 @@ section{
     opacity: 1;
 //    border: thin black solid;
     height: auto;
-    width: 100%;
+    width: 26em;
     margin: auto;
     background-color: $primary-back-color;
     p{
-        width: 15em;
-        margin-left: 3.5em;
+        width: 16em;
+        margin-left: 2em;
     }
     img{
-        width: 20em;
-        height: 20em;
-        margin: 1.5em 3.5em 1.5em 4em;
+        width: 17em;
+        height: 17em;
+        margin: 1.5em 4.8em 1.5em 4.8em;
 //        margin-top: 1.5em;
         border: none;
     }
@@ -111,7 +111,7 @@ section{
     display: none;
 }
 
-.pic1,.pic2,.pic3,#Paperart,#Logo,#Pack,.cls{
+.pic1,.pic2,.pic3,#Paperart,#Logo,#Pack,.cls,#Send{
     cursor: pointer;
 }
 
@@ -162,8 +162,8 @@ section{
         
         #Send{
             height: 3em;
-            width: 10em;
-            margin: 1em 0 1em 6em;
+            width: 50%;
+            margin: 1em 0 1em 4.5em;
             background-color: $primary-back-color;
             border: none;
         }
