--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -694,7 +694,6 @@ section {
     overflow: hidden;
     border: orange thin solid; }
   .heading {
-    position: fixed;
     background-color: #6E6E6E;
     height: 10.5em;
     width: 100%;
@@ -708,7 +707,7 @@ section {
       font-size: 3em;
       margin-top: 1.1em; }
   section {
-    padding-top: 11em; }
+    padding-top: 12em; }
   #Nav {
     margin: auto;
     margin-top: 5.5em; }
@@ -826,11 +825,10 @@ section {
   .container {
     border: cyan thin solid; }
   .heading {
-    background-color: #6E6E6E;
-    height: 10.5em; }
+    height: 11em; }
     .heading img {
-      width: 8em;
-      height: 8em; }
+      width: 9em;
+      height: 9em; }
     .heading h1 {
       font-size: 5em; }
   #Bars {
@@ -841,8 +839,7 @@ section {
     z-index: 1000;
     top: 0;
     left: 0;
-    margin-top: 5em;
-    margin-bottom: -8em;
+    margin-top: 5.25em;
     background-color: #6E6E6E; }
     #Nav ul {
       display: -webkit-flex;
@@ -959,7 +956,7 @@ section {
   .heading {
     margin: 0 0 1em 0;
     width: 100%;
-    height: 10em; }
+    height: 10.5em; }
     .heading h1 {
       margin: auto;
       display: block; }
@@ -972,23 +969,18 @@ section {
     top: 0;
     left: 0;
     background-color: #6E6E6E;
-    margin-top: 4em;
-    width: 100%;
-    height: 3.5em; }
+    width: 100%; }
     #Nav ul {
       display: -webkit-flex;
       display: -ms-flexbox;
-      display: flex;
-      margin: 1em 0 0 2.5em; }
+      display: flex; }
       #Nav ul li {
         width: auto;
-        margin-left: 0;
         text-align: center;
         -webkit-flex: 1 1 content;
         -ms-flex: 1 1 content;
-        flex: 1 1 content;
-        border: red thin solid; }
+        flex: 1 1 content; }
   section {
-    padding-top: 15em; } }
+    padding-top: 10em; } }
 
 /*# sourceMappingURL=styles.css.map */
