--- a/resources/assets/sass/components/breakpoints.scss
+++ b/resources/assets/sass/components/breakpoints.scss
@@ -7,12 +7,9 @@
     }
     
     .heading{
-//        position: relative;
-        position: fixed;
         background-color: $secondary-back-color;
         height: 10.5em;
         width: 100%;
-//        max-width: 54.88em;
         z-index: 1000;
     
         img{
@@ -27,11 +24,10 @@
         #Bars {
             font-size: 3em;
             margin-top: 1.1em;
-//            margin-left: 0.2em;
         }
     }
     section{
-        padding-top: 11em;
+        padding-top: 12em;
     }
     
     #Nav {
@@ -61,8 +57,6 @@
         display: block;
         width: 100%;
         height: 100%;
-    //	position: relative;
-    //    margin-top: 10em;
         margin: 0 1em 0 0.5em;
 //        border: red solid thin;
     }
@@ -181,7 +175,6 @@
             input{
     //            border: thin orange solid;
                 width: 21.5em;
-//                max-width: 22em;
                 margin-top: 1.5em;
                 margin-left: 0.3em;
 //                display: inline-block;
@@ -230,12 +223,11 @@
         }
         
        .heading{
-            background-color: $secondary-back-color;
-            height: 10.5em;
+           height: 11em;
            
             img{
-                width: 8em;
-                height: 8em;
+                width: 9em;
+                height: 9em;
             }
            
             h1{
@@ -253,8 +245,7 @@
             z-index: 1000;
             top: 0;
             left: 0;
-            margin-top: 5em;
-            margin-bottom: -8em;
+            margin-top: 5.25em;
             background-color: $secondary-back-color;
             
             ul{
@@ -448,11 +439,15 @@
     .heading{
        margin: 0 0 1em 0;
         width: 100%;
-        height: 10em;
+        height: 10.5em;
 //        border: thin red solid;
         h1{
             margin: auto;
             display: block;
+        }
+        
+        img{
+            
         }
     }
     
@@ -467,23 +462,22 @@
         top: 0;
         left: 0;
         background-color: $secondary-back-color;
-        margin-top: 4em;
+//        margin-top: 5.25em;
         width: 100%;
-        height: 3.5em;
         ul{
             display: flex;
-            margin: 1em 0 0 2.5em;
+//            margin: 1em 0 0 2.5em;
                 li{
                     width: auto;
-                    margin-left: 0;
+//                    margin-left: 0;
                     text-align: center;
                     flex: 1 1 content;
-                    border: red thin solid;
+//                    border: red thin solid;
                 }
         }
     }
     
     section{
-        padding-top: 15em;
+        padding-top: 10em;
     }
 }
