--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,5 +6,6 @@
 @import 'components/foot';
 @import 'components/slick-theme';
 @import 'components/slick';
+@import 'components/admin';
 @import 'components/breakpoints';
 
