changes to admin blade and admin.sass

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -404,7 +404,7 @@ section {
     width: 17em;
     height: 17em;
     margin: 1.5em 4.8em 1.5em 4.8em;
-    border: none; }
+    border: 0.15em black solid; }
   .info .cls {
     position: relative;
     width: 5em;
@@ -703,11 +703,29 @@ section {
   color: black; }
 
 .paperAd {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   border: red solid thin;
   margin-top: 5em; }
   .paperAd img {
     width: 10em;
-    height: 10em; }
+    height: 10em;
+    margin: 1em;
+    border: 0.15em black solid; }
+  .paperAd .pInfo {
+    display: inline-block;
+    width: 35em;
+    border: green thin solid; }
+  .paperAd .status {
+    border: blue thin solid;
+    height: 1.2em;
+    margin: 0.65em 0 0 1em;
+    font-size: 1.5em; }
+    .paperAd .status span:nth-child(2) {
+      color: darkgreen; }
+    .paperAd .status span:nth-child(3) {
+      color: red; }
 
 /*==============================================================*/
 @media only screen and (min-width: 35em) {
