--- a/resources/assets/sass/components/main.scss
+++ b/resources/assets/sass/components/main.scss
@@ -97,8 +97,7 @@ section{
         width: 17em;
         height: 17em;
         margin: 1.5em 4.8em 1.5em 4.8em;
-//        margin-top: 1.5em;
-        border: none;
+        border: 0.15em black solid;
     }
     .cls{
         position: relative;
