--- a/resources/assets/sass/components/admin.scss
+++ b/resources/assets/sass/components/admin.scss
@@ -49,6 +49,13 @@
                 color: red;
             }
         }
+        
+        .buttons{
+            border: orange solid thin;
+            margin: 0.97em 0 0 1em;
+            min-width: 2em;
+            max-height: 2em;
+        }
     }
 
 
