--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -718,19 +718,48 @@ section {
     width: 35em;
     border: green thin solid; }
   .paperAd .status {
-    border: blue thin solid;
-    height: 1.2em;
-    margin: 0.65em 0 0 1em;
+    height: 1.5em;
+    width: 9em;
+    margin: 0.65em 0 0 2.5em;
     font-size: 1.5em; }
     .paperAd .status span:nth-child(2) {
-      color: darkgreen; }
+      color: darkgreen;
+      margin-top: -1.35em;
+      margin-left: 3.5em; }
     .paperAd .status span:nth-child(3) {
-      color: red; }
-  .paperAd .buttons {
+      color: red;
+      margin-top: -1.35em;
+      margin-left: 3.5em; }
+  .paperAd .buttonsStat {
     border: orange solid thin;
-    margin: 0.97em 0 0 1em;
-    min-width: 2em;
-    max-height: 2em; }
+    margin: 3.9em 0 0 -14em;
+    height: 2em;
+    width: 13.3em; }
+    .paperAd .buttonsStat button:nth-child(1) {
+      border: darkred solid thin;
+      color: green;
+      width: 6em;
+      height: 2em; }
+    .paperAd .buttonsStat button:nth-child(2) {
+      border: darkred solid thin;
+      color: red;
+      width: 7em;
+      height: 2em; }
+  .paperAd .buttonsEdit {
+    border: cyan solid thin;
+    margin: 2em 0 0 5em; }
+    .paperAd .buttonsEdit button:nth-child(1) {
+      border: darkred solid thin;
+      margin-top: 2em;
+      margin-left: -2em;
+      color: red;
+      width: 7em;
+      height: 2em; }
+    .paperAd .buttonsEdit button:nth-child(2) {
+      border: darkred solid thin;
+      color: red;
+      width: 8em;
+      height: 2em; }
 
 /*==============================================================*/
 @media only screen and (min-width: 35em) {
