--- a/resources/assets/sass/components/breakpoints.scss
+++ b/resources/assets/sass/components/breakpoints.scss
@@ -3,7 +3,7 @@
     .container{
         width: 100%;
         overflow: hidden;
-        border: orange thin solid;
+//        border: orange thin solid;
     }
     
     .heading{
@@ -219,7 +219,7 @@
 /*==========================================================================================*/
     @media only screen and (min-width: 55em) {
         .container{
-            border: cyan thin solid;
+//            border: cyan thin solid;
         }
         
        .heading{
