--- a/resources/assets/sass/components/breakpoints.scss
+++ b/resources/assets/sass/components/breakpoints.scss
@@ -13,19 +13,22 @@
         z-index: 1000;
     
         img{
-            width: 8em;
-            height: 8em;
+            width: 85%;
+//            height: 5em;
+            margin: auto;
         }
         
-        h1{
-            font-size: 3.5em;
+        p{
+            margin: auto;
+            margin-top: 1em;
         }
         
         #Bars {
             font-size: 3em;
-            margin-top: 1.1em;
+//            margin-top: 1.1em;
         }
     }
+    
     section{
         padding-top: 12em;
     }
@@ -226,12 +229,9 @@
            height: 11em;
            
             img{
-                width: 9em;
-                height: 9em;
-            }
-           
-            h1{
-                font-size: 5em;
+                width: 90%;
+//                height: 5.5em;
+                margin: auto;
             }
         }
         
@@ -441,13 +441,11 @@
         width: 100%;
         height: 10.5em;
 //        border: thin red solid;
-        h1{
-            margin: auto;
-            display: block;
-        }
         
         img{
-            
+            width: 60%;
+//            height: 5.5em;
+            margin: auto;
         }
     }
     
