--- a/resources/assets/sass/components/head.scss
+++ b/resources/assets/sass/components/head.scss
@@ -19,15 +19,14 @@
     }
     
     p{
-        margin-right: 1em;
-        margin-top: 1em;
+        margin: auto;
+//        margin-top: 1em;
     }
     
     img{
-        width: 5em;
-        height: 5em;
-        margin-top: 1em;
-        margin-left: 1em;
+        width:26em;
+//        height: 5em;
+        margin: auto;
     }
 }
 
